--- a/README
+++ b/README
@@ -1,4 +1,4 @@
 Livy helper
 ===========
 
-repository that organize some code that help consume API endpoints of Apache Livy
+Help consume API endpoints from Apache Livy
